--- a/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
+++ b/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
@@ -1,28 +1,8 @@
 <div class="flex-none bg-white rounded-s shadow-md px-2">
   <ul class="flex flex-nowrap flex-row-reverse text-sm font-medium text-center text-gray-500 ">
-    <li class="">
+    <li class="" *ngFor="let tab of tabs">
       <a
-        class="inline-block px-4 py-2 my-1 text-white border-solid border-2 border-gray-200  bg-gradient-to-bl from-green-400 to-green-700 rounded-sm shadow-inner">الجميع</a>
-    </li>
-    <li class="mr-2 ">
-      <a
-        class="inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-200">الجديد</a>
-    </li>
-    <li class="mr-2">
-      <a
-        class="inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-200">المؤجل</a>
-    </li>
-    <li class="mr-2">
-      <a
-        class="inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-200">عاجلة</a>
-    </li>
-    <li class="mr-2">
-      <a
-        class="inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-200">للتوقيع</a>
-    </li>
-    <li class="mr-2">
-      <a
-        class="inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-100">الطلبات</a>
+       [ngClass]="(selectedTabId === tab.id)? 'bg-gradient-to-bl from-green-400 to-green-700 inline-block px-4 py-2 my-1 text-white border-solid border-2 border-gray-200 rounded-sm shadow-inner':'inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-200' " class="" (click)="selectTab(tab.id)">{{tab.label}}</a>
     </li>
   </ul>
 </div>
