--- a/src/app/pages/inbox/components/detailed/detailed.component.html
+++ b/src/app/pages/inbox/components/detailed/detailed.component.html
@@ -24,7 +24,7 @@
   </div>
   </div>
 <!-- tabs  -->
-<div class="mb-4 border-b border-gray-200 ">
+<div class="mb-4  border-gray-200 ">
   <ul class="flex flex-row-reverse flex-wrap -mb-px text-sm font-medium text-center" id="myTab"
     data-tabs-toggle="#myTabContent" role="tablist">
     <li class="mr-2" role="presentation">
@@ -105,38 +105,30 @@
         </a>
       </li>
       </ul>
+      <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20">
+        <div class="flex flex-row-reverse justify-between mb-8">
+          <h3 class="font-semibold">خطاب</h3>
+          <button type="button"
+            class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-md shadow-lg text-sm p-2.5 text-center inline-flex items-center mr-2 ">
+            <svg fill="none" class="w-5 h-5" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125">
+              </path>
+            </svg>
+            <span class="sr-only">Icon description</span>
+          </button>
+        </div>
+        <div>
+          <h4>بسم الله</h4>
+          <h6>السلام عليكم ورحمة الله وبركاته</h6>
+          <p class="text-gray-700 font-bold text-base">
+            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
+            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
+            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
+          </p>
+        </div>
+      </div>
   </div>
-  <div id="myTabContent">
-    <div class=" p-4 rounded-lg bg-gray-50 " id="profile" role="tabpanel" aria-labelledby="profile-tab">
-      <p class="text-sm text-gray-500 ">This is some placeholder content the <strong
-          class="font-medium text-gray-800 ">Profile tab's associated content</strong>. Clicking another
-        tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content
-        visibility and styling.</p>
-    </div>
-    </div>
-    <!-- tabs  -->
-  <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20">
-    <div class="flex flex-row-reverse justify-between mb-8">
-      <h3 class="font-semibold">خطاب</h3>
-        <button type="button"
-          class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-md shadow-lg text-sm p-2.5 text-center inline-flex items-center mr-2 ">
-          <svg fill="none" class="w-5 h-5" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125">
-            </path>
-          </svg>
-          <span class="sr-only">Icon description</span>
-        </button>
-    </div>
-    <div>
-      <h4>بسم الله</h4>
-      <h6>السلام عليكم ورحمة الله وبركاته</h6>
-      <p class="text-gray-700 font-bold text-base">
-        هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-        هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-        هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-      </p>
-    </div>
-    </div>
+  <!-- tabs  -->
     </div>
