--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -11,7 +11,7 @@
 
 <!-- search-bar -->
 <div class="search-bar mr-5 ">
-<app-tab-bar></app-tab-bar>
+<app-filter-bar></app-filter-bar>
 <app-search-bar></app-search-bar>
     <div class="flex items-center text-green-700">
         <span class="font-semibold mr-2"> البحث المتقدم</span>
