--- a/src/app/pages/inbox/components/detailed/detailed.component.html
+++ b/src/app/pages/inbox/components/detailed/detailed.component.html
@@ -24,161 +24,6 @@
   </div>
   </div>
 <!-- tabs  -->
-<div class="mb-4  border-gray-200 ">
-  <ul class="flex flex-row-reverse flex-wrap -mb-px text-sm font-medium text-center" id="myTab"
-    data-tabs-toggle="#myTabContent" role="tablist">
-    <li class="mr-2" role="presentation">
-      <a
-          class="inline-flex p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 group">
-          خطاب تغطية
-  
-          <svg class="w-5 h-5 mr-2 text-gray-400 group-hover:text-gray-500" fill="none" stroke="currentColor"
-            stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z">
-            </path>
-          </svg>
-        </a>
-      </li>
-      <li class="mr-2" role="presentation">
-        <a
-          class="inline-flex p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 group">
-          عروض
-  
-          <svg class="w-5 h-5 mr-2 text-gray-400 group-hover:text-gray-500" fill="none" stroke="currentColor"
-            stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z">
-            </path>
-          </svg>
-        </a>
-      </li>
-      <li class="mr-2" role="presentation">
-        <a
-          class="inline-flex p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 group">
-          مذكرة
-  
-          <svg class="w-5 h-5 mr-2 text-gray-400 group-hover:text-gray-500" fill="none" stroke="currentColor"
-            stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z">
-            </path>
-          </svg>
-        </a>
-      </li>
-      <li class="mr-2" role="presentation">
-        <a
-          class="inline-flex p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 group">
-          محاضر اللجان
-  
-          <svg class="w-5 h-5 mr-2 text-gray-400 group-hover:text-gray-500" fill="none" stroke="currentColor"
-            stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z">
-            </path>
-          </svg>
-        </a>
-      </li>
-      <li class="mr-2" role="presentation">
-        <a
-          class="inline-flex p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 group">
-          الشروحات
-  
-          <svg class="w-5 h-5 mr-2 text-gray-400 group-hover:text-gray-500" fill="none" stroke="currentColor"
-            stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z">
-            </path>
-          </svg>
-        </a>
-      </li>
-      <li class="mr-2" role="presentation">
-        <a class="inline-flex p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 group">
-          المرفقات
-      
-          <svg class="w-5 h-5 mr-2 text-gray-400 group-hover:text-gray-500" fill="none" stroke="currentColor"
-            stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z">
-            </path>
-          </svg>
-        </a>
-      </li>
-      </ul>
-      <!-- tab -->
-      <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20">
-        <div class="flex flex-row-reverse justify-between mb-8">
-          <h3 class="font-semibold">خطاب</h3>
-          <button type="button"
-            class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-md shadow-lg text-sm p-2.5 text-center inline-flex items-center mr-2 ">
-            <svg fill="none" class="w-5 h-5" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125">
-              </path>
-            </svg>
-            <span class="sr-only">Icon description</span>
-          </button>
-        </div>
-        <div>
-          <h4>بسم الله</h4>
-          <h6>السلام عليكم ورحمة الله وبركاته</h6>
-          <p class="text-gray-700 font-bold text-base">
-            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-          </p>
-        </div>
-      </div>
-      <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20">
-        <div class="flex flex-row-reverse justify-between mb-8">
-          <h3 class="font-semibold">خطاب</h3>
-          <button type="button"
-            class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-md shadow-lg text-sm p-2.5 text-center inline-flex items-center mr-2 ">
-            <svg fill="none" class="w-5 h-5" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125">
-              </path>
-            </svg>
-            <span class="sr-only">Icon description</span>
-          </button>
-        </div>
-        <div>
-          <h4>بسم الله</h4>
-          <h6>السلام عليكم ورحمة الله وبركاته</h6>
-          <p class="text-gray-700 font-bold text-base">
-            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-          </p>
-        </div>
-      </div>
-      <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20">
-        <div class="flex flex-row-reverse justify-between mb-8">
-          <h3 class="font-semibold">خطاب</h3>
-          <button type="button"
-            class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-md shadow-lg text-sm p-2.5 text-center inline-flex items-center mr-2 ">
-            <svg fill="none" class="w-5 h-5" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125">
-              </path>
-            </svg>
-            <span class="sr-only">Icon description</span>
-          </button>
-        </div>
-        <div>
-          <h4>بسم الله</h4>
-          <h6>السلام عليكم ورحمة الله وبركاته</h6>
-          <p class="text-gray-700 font-bold text-base">
-            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-            هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-          </p>
-        </div>
-      </div>
-      <!-- tab -->
-  </div>
+<app-tab-bar></app-tab-bar>
   <!-- tabs  -->
     </div>
