--- a/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
+++ b/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
@@ -151,13 +151,82 @@
       </button>
     </div>
     <div>
-      <h4>بسم الله</h4>
-      <h6>السلام عليكم ورحمة الله وبركاته</h6>
-      <p class="text-gray-700 font-bold text-base">
-        هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-        هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-        هذا مثال لنص يمكن استبداله لورم ابيسم دولار سبميت ممكن اقصى سنوية مصير
-      </p>
+      <!-- time-line -->
+      <ol class="items-center justify-center sm:flex">
+        <li class="relative mb-6 sm:mb-0">
+          <div class="flex items-center">
+            <div
+              class="z-10 flex items-center justify-center w-6 h-6 bg-green-100 rounded-full ring-0 ring-white sm:ring-8 shrink-0">
+              <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+              </svg>
+            </div>
+            <div class="hidden sm:flex w-full bg-gray-200 h-0.5"></div>
+          </div>
+          <div class="mt-3 sm:pr-8">
+            <h3 class="text-lg font-semibold text-gray-900">مستخدم رئيس الجهة</h3>
+            <time class="block mb-2 text-sm font-normal leading-none text-gray-400"> December 2,
+              2021</time>
+            <p class="text-base font-normal text-gray-500">لورم ابيسم</p>
+          </div>
+        </li>
+        <li class="relative mb-6 sm:mb-0">
+          <div class="flex items-center">
+            <div
+              class="z-10 flex items-center justify-center w-6 h-6 bg-gray-100 rounded-full ring-0 ring-white sm:ring-8 shrink-0">
+              <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+              </svg>
+            </div>
+            <div class="hidden sm:flex w-full bg-gray-200 h-0.5"></div>
+          </div>
+          <div class="mt-3 sm:pr-8">
+            <h3 class="text-lg font-semibold text-gray-900">مستخدم رئيس الجهة</h3>
+            <time class="block mb-2 text-sm font-normal leading-none text-gray-400"> December 2,
+              2021</time>
+            <p class="text-base font-normal text-gray-500">لورم ابيسم</p>
+          </div>
+        </li>
+        <li class="relative mb-6 sm:mb-0">
+          <div class="flex items-center">
+            <div
+              class="z-10 flex items-center justify-center w-6 h-6 bg-gray-100 rounded-full ring-0 ring-white sm:ring-8 shrink-0">
+              <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+              </svg>
+            </div>
+            <div class="hidden sm:flex w-full bg-gray-200 h-0.5"></div>
+          </div>
+          <div class="mt-3 sm:pr-8">
+            <h3 class="text-lg font-semibold text-gray-900">مستخدم رئيس الجهة</h3>
+            <time class="block mb-2 text-sm font-normal leading-none text-gray-400"> December
+              23, 2021</time>
+            <p class="text-base font-normal text-gray-500">لورم ابيسم</p>
+          </div>
+        </li>
+        <li class="relative mb-6 sm:mb-0">
+          <div class="flex items-center">
+            <div
+              class="z-10 flex items-center justify-center w-6 h-6 bg-gray-100 rounded-full ring-0 ring-white sm:ring-8 shrink-0">
+              <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+              </svg>
+            </div>
+            <div class="hidden sm:flex w-full bg-gray-200 h-0.5"></div>
+          </div>
+          <div class="mt-3 sm:pr-8">
+            <h3 class="text-lg font-semibold text-gray-900 ">مستخدم رئيس الجهة</h3>
+            <time class="block mb-2 text-sm font-normal leading-none text-gray-400"> January 5,
+              2022</time>
+            <p class="text-base font-normal text-gray-500">لورم ابيسم</p>
+          </div>
+        </li>
+      </ol>
+      <!-- time-line -->
     </div>
   </div>
   <div *ngSwitchDefault>
