--- a/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
+++ b/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
@@ -88,6 +88,7 @@
   </ul>
   <!-- tab -->
   <section [ngSwitch]="activeTab">
+    <!-- خطاب -->
     <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20" *ngSwitchCase="'خطاب تغطية'">
       <div class="flex flex-row-reverse justify-between mb-8">
       <h3 class="font-semibold">خطاب</h3>
@@ -112,6 +113,8 @@
       </p>
     </div>
   </div>
+    <!-- خطاب -->
+    <!-- عروض -->
   <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20" *ngSwitchCase="'عروض'">
     <div class="flex flex-row-reverse justify-between mb-8">
       <h3 class="font-semibold">عروض</h3>
@@ -136,6 +139,8 @@
       </p>
     </div>
   </div>
+  <!-- عروض -->
+  <!-- الشروحات -->
   <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20" *ngSwitchCase="'الشروحات'">
     <div class="flex flex-row-reverse justify-between mb-8">
       <h3 class="font-semibold">الشروحات</h3>
@@ -229,6 +234,40 @@
       <!-- time-line -->
     </div>
   </div>
+  <!-- الشروحات -->
+  <!-- المرفقات -->
+  <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20" *ngSwitchCase="'المرفقات'">
+    <div class="flex flex-row-reverse justify-between mb-8">
+      <h3 class="font-semibold">المرفقات</h3>
+      <button type="button"
+        class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-md shadow-lg text-sm p-2.5 text-center inline-flex items-center mr-2 ">
+        <svg fill="none" class="w-5 h-5" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125">
+          </path>
+        </svg>
+        <span class="sr-only">Icon description</span>
+      </button>
+    </div>
+    <div class="flex items-center justify-center w-full">
+      <label for="dropzone-file"
+        class="flex flex-col items-center justify-center w-full h-44 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 dark:hover:bg-bray-800  hover:bg-gray-100">
+        <div class="flex flex-col items-center justify-center pt-5 pb-6">
+          <svg aria-hidden="true" class="w-10 h-10 mb-3 text-gray-400" fill="none" stroke="currentColor"
+            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path>
+          </svg>
+          <p class="mb-2 text-sm text-gray-500"><span class="font-semibold">Click to upload</span> or
+            drag and drop</p>
+          <p class="text-xs text-gray-500">SVG, PNG, JPG or GIF (MAX. 800x400px)</p>
+        </div>
+        <input id="dropzone-file" type="file" class="hidden" />
+      </label>
+    </div>
+  </div>
+  <!-- المرفقات -->
   <div *ngSwitchDefault>
     default
   </div>
