--- a/src/app/shared/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/breadcrumb/breadcrumb.component.html
@@ -22,7 +22,7 @@
     </li>
 
     <li class="inline-flex items-center">
-      <a class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-green-600 ">
+      <a class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-green-600 " [routerLink]="['/index']">
         {{mainProgramName}}
         <svg fill="none" color="gray" class="ml-1" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
           xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
