--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -14,8 +14,8 @@
 <app-filter-bar></app-filter-bar>
 <app-search-bar></app-search-bar>
     <div class="flex items-center text-green-700">
-        <span class="font-semibold mr-2"> البحث المتقدم</span>
-        <svg fill="none" class="w-5 h-5" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
+        <span class="font-semibold ml-9 mr-2"> البحث المتقدم</span>
+        <svg fill="none" class="w-5 h-5 hover:text-green-900" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
             xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round"
                 d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75">
