--- a/src/app/pages/inbox/views/search-bar/search-bar.component.html
+++ b/src/app/pages/inbox/views/search-bar/search-bar.component.html
@@ -2,11 +2,12 @@
 
   <form class="">
     <div class="flex flex-row-reverse ">
+
       <div
-        class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100
-                                border border-gray-300 rounded-r-sm hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 ">
-        <select class="py-2 text-sm text-gray-700 " name="treatment" id="treatment">
-          <option class="inline-flex flex-row-reverse w-full px-4 py-2 hover:bg-gray-100 " value="1">كل المعاملات</option>
+        class="flex-shrink-0 z-10 inline-flex items-center text-sm font-medium text-right text-gray-900 bg-gray-200
+                          border border-gray-300 rounded-r-sm hover:bg-gray-200 focus:outline-none  ">
+        <select class="py-2 px-2 text-sm  text-gray-900 bg-gray-200 text-right" name="treatment" id="treatment">
+          <option class="inline-flex  w-full px-4 py-2  hover:bg-gray-100 bg-gray-100" value="1">كل المعاملات</option>
           <option class="inline-flex flex-row-reverse w-full px-4 py-2 hover:bg-gray-100 " value="2">ابيسم</option>
           <option class="inline-flex flex-row-reverse w-full px-4 py-2 hover:bg-gray-100 " value="3">دولار</option>
           <option class="inline-flex flex-row-reverse w-full px-4 py-2 hover:bg-gray-100 " value="4">سبميت</option>
