--- a/src/app/pages/inbox/views/search-bar/search-bar.component.html
+++ b/src/app/pages/inbox/views/search-bar/search-bar.component.html
@@ -6,17 +6,17 @@
       <div
         class="flex-shrink-0 z-10 inline-flex items-center text-sm font-medium text-right text-gray-900 bg-gray-200
                           border border-gray-300 rounded-r-sm hover:bg-gray-200 focus:outline-none  ">
-        <select class="py-2 px-2 text-sm  text-gray-900 bg-gray-200 text-right" name="treatment" id="treatment">
-          <option class="inline-flex  w-full px-4 py-2  hover:bg-gray-100 bg-gray-100" value="1">كل المعاملات</option>
-          <option class="inline-flex flex-row-reverse w-full px-4 py-2 hover:bg-gray-100 " value="2">ابيسم</option>
-          <option class="inline-flex flex-row-reverse w-full px-4 py-2 hover:bg-gray-100 " value="3">دولار</option>
-          <option class="inline-flex flex-row-reverse w-full px-4 py-2 hover:bg-gray-100 " value="4">سبميت</option>
+        <select class="py-1 px-2 text-sm  text-gray-900 bg-gray-200 text-right" name="treatment" id="treatment">
+          <option class="inline-flex  w-full px-4 py-1  hover:bg-gray-100 bg-gray-100" value="1">كل المعاملات</option>
+          <option class="inline-flex flex-row-reverse w-full px-4 py-1 hover:bg-gray-100 " value="2">ابيسم</option>
+          <option class="inline-flex flex-row-reverse w-full px-4 py-1 hover:bg-gray-100 " value="3">دولار</option>
+          <option class="inline-flex flex-row-reverse w-full px-4 py-1 hover:bg-gray-100 " value="4">سبميت</option>
         </select>
       </div>
         <div class="relative w-full mr-2">
-          <input type="search" id="search-dropdown"
-            class="inline-block py-3 w-full z-20  text-right text-sm text-gray-900 bg-gray-50 rounded-s  border border-gray-300 focus:ring-green-500 focus:border-green-500 "
-            placeholder="البحث باسم المعاملة..." required>
+          <input type="search"
+            class="inline-block py-2 w-full z-20  text-right text-sm text-gray-900 bg-gray-50 rounded-s  border border-gray-300"
+            placeholder="البحث باسم المعاملة..." size="125" required>
         </div>
       <button type="button"
         class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-sm text-sm p-2.5 text-center inline-flex items-center mr-2 ">
