--- a/src/app/pages/inbox/views/search-bar/search-bar.component.html
+++ b/src/app/pages/inbox/views/search-bar/search-bar.component.html
@@ -4,7 +4,7 @@
     <div class="flex flex-row-reverse ">
 
       <div
-        class="flex-shrink-0 z-10 inline-flex items-center text-sm font-medium text-right text-gray-900 bg-gray-200
+        class="flex-shrink z-10 inline-flex items-center text-sm font-medium text-right text-gray-900 bg-gray-200
                           border border-gray-300 rounded-r-sm hover:bg-gray-200 focus:outline-none  ">
         <select class="py-1 px-2 text-sm  text-gray-900 bg-gray-200 text-right" name="treatment" id="treatment">
           <option class="inline-flex  w-full px-4 py-1  hover:bg-gray-100 bg-gray-100" value="1">كل المعاملات</option>
