--- a/src/app/pages/index/components/home/home.component.html
+++ b/src/app/pages/index/components/home/home.component.html
@@ -1,8 +1,11 @@
+<!-- nav-bar -->
 <app-nav-bar></app-nav-bar>
 <app-side-bar></app-side-bar>
+<!-- nav-bar -->
+
 <section class="flex items-center justify-center ">
   <div class="px-5 py-5">
-    <a [routerLink]="['/inbox']" class="m-5 underline hover:text-green-500">الوارد</a>
+    <a [routerLink]="['/inbox']" class="m-5 underline hover:text-green-500">البريد الوارد </a>
     <a [routerLink]="['/']" class="m-5 underline hover:text-green-500">الاحصائيات</a>
   </div>
 </section>
