--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <!-- TODO: add side bar code to the shared module -->
 <app-loading-spinner *ngIf="loading$ | async"></app-loading-spinner>
    
-    <main class="mr-12">
+    <main class="mr-12" *ngIf="!(loading$ | async)">
 
     <router-outlet></router-outlet>
     
