--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -47,18 +47,18 @@
                                         d="M18.375 12.739l-7.693 7.693a4.5 4.5 0 01-6.364-6.364l10.94-10.94A3 3 0 1119.5 7.372L8.552 18.32m.009-.01l-.01.01m5.699-9.941l-7.81 7.81a1.5 1.5 0 002.112 2.13">
                                     </path>
                                 </svg>
-                                {{treatment.date}}
+                                {{treatment.date | date: 'dd/MM/yyyy' }}
                             </p>
                         </div>
                         <p class="font-normal text-gray-400 ">{{(treatment.description.length > 45)? (treatment.description | slice:0:45):
                             treatment.description}}</p>
-                <div class="flex flex-wrap pt-2">
+                <div class="flex flex-row-reverse flex-wrap pt-2">
                     <span
-                        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">خطاب#</span>
+                        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-1">خطاب#</span>
                     <span
-                        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">مذكرة#</span>
+                        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-1">مذكرة#</span>
                     <span
-                        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">عرض#</span>
+                        class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-1">عرض#</span>
                 </div>
             </a>
             </li>
