--- a/src/app/pages/inbox/views/search-bar/search-bar.component.html
+++ b/src/app/pages/inbox/views/search-bar/search-bar.component.html
@@ -1,11 +1,11 @@
-<div class="inline-block w-full bg-white rounded-sm shadow-md px-2 py-1">
+<div class="inline-block w-full bg-white rounded-md shadow-md px-2 py-1">
 
   <form class="">
     <div class="flex flex-row-reverse ">
 
       <div
         class="flex-shrink z-10 inline-flex items-center text-sm font-medium text-right text-gray-900 bg-gray-200
-                          border border-gray-300 rounded-r-sm hover:bg-gray-200 focus:outline-none  ">
+                          border border-gray-300 rounded-md hover:bg-gray-200 focus:outline-none  ">
         <select class="py-1 px-2 text-sm  text-gray-900 bg-gray-200 text-right" name="treatment" id="treatment">
           <option class="inline-flex  w-full px-4 py-1  hover:bg-gray-100 bg-gray-100" value="1">كل المعاملات</option>
           <option class="inline-flex flex-row-reverse w-full px-4 py-1 hover:bg-gray-100 " value="2">ابيسم</option>
@@ -15,11 +15,11 @@
       </div>
         <div class="relative w-full mr-2">
           <input type="search"
-            class="inline-block py-2 w-full z-20  text-right text-sm text-gray-900 bg-gray-50 rounded-s  border border-gray-300"
-            placeholder="البحث باسم المعاملة..." size="125" required>
+            class="inline-block py-2 w-full z-20  text-right text-sm text-gray-900 bg-gray-50 rounded-md  border border-gray-300"
+            placeholder="البحث باسم المعاملة..." size="125" maxlength="100" required>
         </div>
-      <button type="button"
-        class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-sm text-sm p-2.5 text-center inline-flex items-center mr-2 ">
+      <button type="submit"
+        class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-md text-sm p-2.5 text-center inline-flex items-center mr-2 ">
         <svg fill="none" class="w-5 h-5" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
           xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round"
