--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -31,6 +31,7 @@
     <div class="columns-1 mr-5">
         <div
             class="text-green-700 border-solid border-2 border-gray-200 rounded-s font-semibold bg-white w-96 p-2.5  flex justify-between items-center">
+            <!-- refresh icon  -->
             <span class="mx-1">
                 <svg class="mx-1" fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg"
@@ -39,11 +40,14 @@
                     d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 00-3.7-3.7 48.678 48.678 0 00-7.324 0 4.006 4.006 0 00-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3l-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 003.7 3.7 48.656 48.656 0 007.324 0 4.006 4.006 0 003.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3l-3 3">
                 </path>
             </svg>
+            <!-- refresh icon -->
+            <!-- sort icon -->
             <svg class="mx-1" fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round"
                     d="M3 7.5L7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5"></path>
             </svg>
+            <!-- sort icon -->
             </span>
             المعاملات</div>
         <ul class="">
