--- a/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
+++ b/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
@@ -363,7 +363,7 @@
             <table class=" w-full text-sm text-right text-gray-500">
               <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                 <tr>
-                  <th scope="col" class="px-6 py-3" [ngstyle]="'width:70%'">
+                  <th scope="col" class="px-6 py-3">
                     الاسم
                   </th>
                   <th scope="col" class="px-6 py-3">
