--- a/src/app/pages/tasks/views/data-grid/data-grid.component.html
+++ b/src/app/pages/tasks/views/data-grid/data-grid.component.html
@@ -173,7 +173,7 @@
 </app-confirm-modal>
 <!-- confirm-modal -->
 <!-- toast-modal -->
-<app-toast *ngIf="showToast" (dismiss)="dismissToast($event)" [toastType]="toastType"
+<app-toast *ngIf="showToast" (dismiss)="closeToast($event)" [toastType]="toastType"
   toastTitle="">
 </app-toast>
 <!-- toast-modal -->
