--- a/src/app/pages/tasks/views/data-grid/data-grid.component.html
+++ b/src/app/pages/tasks/views/data-grid/data-grid.component.html
@@ -56,7 +56,7 @@
       <th scope="col" class="px-6 py-3">
         <span class="flex justify-center">
           عنوان المهمة
-            <app-sort-icon [appSort]="data" data-order="desc" data-name="subject" (sortTypeChange)="false"></app-sort-icon>
+            <!-- <app-sort-icon [appSort]="data" data-order="desc" data-name="subject" (sortTypeChange)="false"></app-sort-icon> -->
         </span>
       </th>
       <th scope="col" class="px-6 py-3">
