--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -42,7 +42,8 @@
             </svg>
             <!-- refresh icon -->
             <!-- sort icon -->
-            <svg class="mx-1" fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
+            <svg (click)="true" (sortTypeChange)="true" [appSort]="(treatments)" data-order="desc" data-name="id" class="mx-1"
+                fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round"
                     d="M3 7.5L7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5"></path>
@@ -51,8 +52,8 @@
             </span>
             المعاملات</div>
         <ul class="">
-            <div class="treatments w-96 p-2 my-1 h-96 overflow-y-scroll" *ngIf="(treatments$|async); else placeholder">
-                <li *ngFor="let treatment of (treatments$|async)">
+            <div class="treatments w-96 p-2 my-1 h-96 overflow-y-scroll" *ngIf="(treatments); else placeholder">
+                <li *ngFor="let treatment of (treatments)">
                     <a class="block max-w-sm p-2 my-1 bg-white border border-gray-200 rounded-s shadow hover:bg-gray-50 "
                         [routerLink]="treatment.id" routerLinkActive="active">
                         <div class="flex flex-row-reverse justify-between">
