--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -42,7 +42,7 @@
             </svg>
             <!-- refresh icon -->
             <!-- sort icon -->
-            <svg (click)="true" (sortTypeChange)="true" [appSort]="(treatments)" data-order="desc" data-name="id" class="mx-1"
+            <svg [appSort]="(treatments)" data-order="desc" data-name="date" class="mx-1"
                 fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round"
